--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<style>
 		body
 		{
@@ -10,6 +11,7 @@
 		}
 		ul
 		{
+			background-color: black;
 			/*list-style: none*/;
 		}
 		#edit
@@ -26,13 +28,35 @@
 		{
 			color: white;
 		}
+		button
+		{
+			border-radius: 20px;
+			width: 60px;
+			border:none;
+			outline: none;
+			cursor: pointer;
+			color: white;
+			background-color: black;
+			padding: 2px;
+				}
 
+
+		button i
+		{
+			float: left;
+		}
+
+		button:hover
+		{
+			background-color: green;
+			color: white;
+		}
 
 
 
 		.
 	</style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <script>
   var mylist ;
    
@@ -75,7 +99,6 @@ $("#list1").click(function()
 	$(this).remove();
 })
 
-
 $(document).on('click','button',function()
 {
 	$(this).append('mylist')
@@ -93,10 +116,10 @@ $(document).on('click','button',function()
 </head>
 <body>
 	<h1 style="color: orange;">TO DO LIST</h1>
-	<h3 id="hee">Click on the added element to add your task in doneZone and give a Doubleclick to delte your task</h3>
+	<h3 id="hee">Click on the added element to add your task in doneZone and give a Doubleclick to delete your task</h3>
 <form>
    <input type="text" name="task" id="input">
-   <button>Submit</button>
+   <button>ADD<i class="fa fa-plus" style="font-size:15px"></i></button>
 <br>
 <h1 id="he">ToDo</h1>
 <ol id="list">
