--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ $(document).on('click','button',function()
 </head>
 <body>
 	<h1 style="color: orange;">TO DO LIST</h1>
-	<h3 id="hee">Click on the added element to add your task in doneZone and give a Doubleclick to delete your task</h3>
+	<h3 id="hee">DoubleClick on the added element to add your task in doneZone and give a click to edit and delete your task</h3>
 <form>
    <input type="text" name="task" id="input" placeholder="add your task">
    <button>ADD<i class="fa fa-plus" style="font-size:15px"></i></button>
